Use new Java language features
Migrate code to use:

- record classes
- enhanced switch statements
- more